--- a/assignment2/assignment2_question_b/other/utils/part_b.ipynb
+++ b/assignment2/assignment2_question_b/other/utils/part_b.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,17 +59,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From <ipython-input-8-596e8a5dd8e0>:37: ByteProcessor (from tensorflow.contrib.learn.python.learn.preprocessing.text) is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:\n",
+      "The TensorFlow contrib module will not be included in TensorFlow 2.0.\n",
+      "For more information, please see:\n",
+      "  * https://github.com/tensorflow/community/blob/master/rfcs/20180907-contrib-sunset.md\n",
+      "  * https://github.com/tensorflow/addons\n",
+      "  * https://github.com/tensorflow/io (for I/O related ops)\n",
+      "If you depend on functionality not listed there, please file an issue.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:\n",
+      "The TensorFlow contrib module will not be included in TensorFlow 2.0.\n",
+      "For more information, please see:\n",
+      "  * https://github.com/tensorflow/community/blob/master/rfcs/20180907-contrib-sunset.md\n",
+      "  * https://github.com/tensorflow/addons\n",
+      "  * https://github.com/tensorflow/io (for I/O related ops)\n",
+      "If you depend on functionality not listed there, please file an issue.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From <ipython-input-5-887788d9ca5c>:37: ByteProcessor (from tensorflow.contrib.learn.python.learn.preprocessing.text) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
-      "Please use tensorflow/transform or tf.data.\n",
+      "Please use tensorflow/transform or tf.data.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From <ipython-input-5-887788d9ca5c>:37: ByteProcessor (from tensorflow.contrib.learn.python.learn.preprocessing.text) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use tensorflow/transform or tf.data.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "WARNING:tensorflow:From /Users/heyuhao/opt/anaconda3/lib/python3.7/site-packages/tensorflow_core/python/util/deprecation.py:324: ByteProcessor.__init__ (from tensorflow.contrib.learn.python.learn.preprocessing.text) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use tensorflow/transform or tf.data.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /Users/heyuhao/opt/anaconda3/lib/python3.7/site-packages/tensorflow_core/python/util/deprecation.py:324: ByteProcessor.__init__ (from tensorflow.contrib.learn.python.learn.preprocessing.text) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use tensorflow/transform or tf.data.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From <ipython-input-5-887788d9ca5c>:50: VocabularyProcessor.__init__ (from tensorflow.contrib.learn.python.learn.preprocessing.text) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use tensorflow/transform or tf.data.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From <ipython-input-5-887788d9ca5c>:50: VocabularyProcessor.__init__ (from tensorflow.contrib.learn.python.learn.preprocessing.text) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use tensorflow/transform or tf.data.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /Users/heyuhao/opt/anaconda3/lib/python3.7/site-packages/tensorflow_core/contrib/learn/python/learn/preprocessing/text.py:154: CategoricalVocabulary.__init__ (from tensorflow.contrib.learn.python.learn.preprocessing.categorical_vocabulary) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use tensorflow/transform or tf.data.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /Users/heyuhao/opt/anaconda3/lib/python3.7/site-packages/tensorflow_core/contrib/learn/python/learn/preprocessing/text.py:154: CategoricalVocabulary.__init__ (from tensorflow.contrib.learn.python.learn.preprocessing.categorical_vocabulary) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use tensorflow/transform or tf.data.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /Users/heyuhao/opt/anaconda3/lib/python3.7/site-packages/tensorflow_core/contrib/learn/python/learn/preprocessing/text.py:170: tokenizer (from tensorflow.contrib.learn.python.learn.preprocessing.text) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use tensorflow/transform or tf.data.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /Users/heyuhao/opt/anaconda3/lib/python3.7/site-packages/tensorflow_core/contrib/learn/python/learn/preprocessing/text.py:170: tokenizer (from tensorflow.contrib.learn.python.learn.preprocessing.text) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Please use tensorflow/transform or tf.data.\n"
      ]
@@ -78,7 +184,7 @@
    "source": [
     "MAX_DOCUMENT_LENGTH=100\n",
     "\n",
-    "csv_path = '/Users/heyuhao/Desktop/y3s1/original/19S1-CE4042-CZ4042-NEURAL NETWORK  DEEP LEARNING/Assignments'\n",
+    "csv_path = '/Users/heyuhao/Desktop/y3s1/original/19S1-CE4042-CZ4042-NEURAL-NETWORK-DEEP-LEARNING/Assignments'\n",
     "\n",
     "df_train = pd.read_csv(os.path.join(csv_path, 'train_medium.csv'), names=['class', '_', 'text'], usecols=['class', 'text'])\n",
     "df_test = pd.read_csv(os.path.join(csv_path, 'test_medium.csv'), names=['class', '_', 'text'], usecols=['class', 'text'])\n",
@@ -118,10 +224,10 @@
     "y_train_cnn = np.array(y_train.values)\n",
     "y_test_cnn = np.array(y_test.values)\n",
     "\n",
-    "np.save(os.path.join('other', 'npy', 'x_train_cnn.npy'), x_train_cnn)\n",
-    "np.save(os.path.join('other', 'npy', 'x_test_cnn.npy'), x_test_cnn)\n",
-    "np.save(os.path.join('other', 'npy', 'y_train_cnn.npy'), y_train_cnn)\n",
-    "np.save(os.path.join('other', 'npy', 'y_test_cnn.npy'), y_test_cnn)\n",
+    "# np.save(os.path.join('other', 'npy', 'x_train_cnn.npy'), x_train_cnn)\n",
+    "# np.save(os.path.join('other', 'npy', 'x_test_cnn.npy'), x_test_cnn)\n",
+    "# np.save(os.path.join('other', 'npy', 'y_train_cnn.npy'), y_train_cnn)\n",
+    "# np.save(os.path.join('other', 'npy', 'y_test_cnn.npy'), y_test_cnn)\n",
     "\n",
     "\n",
     "# rnn features\n",
@@ -132,18 +238,31 @@
     "y_test_rnn = np.array(y_test.values)\n",
     "no_words = len(vocab_processor.vocabulary_)\n",
     "\n",
-    "np.save(os.path.join('other', 'npy', 'x_train_rnn.npy'), x_train_rnn)\n",
-    "np.save(os.path.join('other', 'npy', 'x_test_rnn.npy'), x_test_rnn)\n",
-    "np.save(os.path.join('other', 'npy', 'y_train_rnn.npy'), y_train_rnn)\n",
-    "np.save(os.path.join('other', 'npy', 'y_test_rnn.npy'), y_test_rnn)"
+    "# np.save(os.path.join('other', 'npy', 'x_train_rnn.npy'), x_train_rnn)\n",
+    "# np.save(os.path.join('other', 'npy', 'x_test_rnn.npy'), x_test_rnn)\n",
+    "# np.save(os.path.join('other', 'npy', 'y_train_rnn.npy'), y_train_rnn)\n",
+    "# np.save(os.path.join('other', 'npy', 'y_test_rnn.npy'), y_test_rnn)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "34016"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "no_words"
+   ]
   },
   {
    "cell_type": "code",
