--- a/assignment2/assignment2_question_b/other/utils/temp.ipynb
+++ b/assignment2/assignment2_question_b/other/utils/temp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,108 +26,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "dir_path = '.'\n",
     "\n",
-    "x_train = np.load(os.path.join(dir_path, '..', 'npy', 'x_train_rnn.npy'), allow_pickle=True)\n",
-    "x_test = np.load(os.path.join(dir_path, '..', 'npy', 'x_test_rnn.npy'), allow_pickle=True)\n",
-    "y_train = np.load(os.path.join(dir_path, '..', 'npy', 'y_train_rnn.npy'), allow_pickle=True)\n",
-    "y_test = np.load(os.path.join(dir_path, '..', 'npy', 'y_test_rnn.npy'), allow_pickle=True)\n",
+    "x_train_c = np.load(os.path.join(dir_path, '..', 'npy', 'x_train_char.npy'), allow_pickle=True)\n",
+    "x_test_c = np.load(os.path.join(dir_path, '..', 'npy', 'x_test_char.npy'), allow_pickle=True)\n",
+    "y_train_c = np.load(os.path.join(dir_path, '..', 'npy', 'y_train_char.npy'), allow_pickle=True)\n",
+    "y_test_c = np.load(os.path.join(dir_path, '..', 'npy', 'y_test_char.npy'), allow_pickle=True)\n",
     "\n",
-    "MAX_DOCUMENT_LENGTH = 100\n",
-    "HIDDEN_SIZE = 20\n",
-    "MAX_LABEL = 15\n",
-    "EMBEDDING_SIZE = 50\n",
-    "\n",
-    "lr = 0.01\n"
+    "x_train_w = np.load(os.path.join(dir_path, '..', 'npy', 'x_train_word.npy'), allow_pickle=True)\n",
+    "x_test_w = np.load(os.path.join(dir_path, '..', 'npy', 'x_test_word.npy'), allow_pickle=True)\n",
+    "y_train_w = np.load(os.path.join(dir_path, '..', 'npy', 'y_train_word.npy'), allow_pickle=True)\n",
+    "y_test_w = np.load(os.path.join(dir_path, '..', 'npy', 'y_test_word.npy'), allow_pickle=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1, 400],\n",
-       "       [2, 400],\n",
-       "       [3, 400],\n",
-       "       [4, 400],\n",
-       "       [5, 400],\n",
-       "       [6, 400],\n",
-       "       [7, 400],\n",
-       "       [8, 400],\n",
-       "       [9, 400],\n",
-       "       [10, 400],\n",
-       "       [11, 400],\n",
-       "       [12, 400],\n",
-       "       [13, 400],\n",
-       "       [14, 400]], dtype=object)"
+       "array([2272, 9045,  130, 3612, 9986, 9987,  699, 9988, 9989,  130,  131,\n",
+       "       1177,  134, 1733, 1135, 2271, 9990, 9991, 2272, 9992,    0,    0,\n",
+       "          0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+       "          0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+       "          0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+       "          0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+       "          0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+       "          0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+       "          0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+       "          0])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "unique, counts = np.unique(y_train, return_counts=True)\n",
-    "np.asarray((unique, counts)).T"
+    "x_train_w[1000]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in range(5):\n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14], dtype=object)"
+       "100"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.unique(y_test)"
+    "len(x_train_w[1000])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From <ipython-input-20-ba50915add5e>:10: BasicRNNCell.__init__ (from tensorflow.python.ops.rnn_cell_impl) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "This class is equivalent as tf.keras.layers.SimpleRNNCell, and will be replaced by that in Tensorflow 2.0.\n",
-      "word_vectors:  [array([5600,  100,   50], dtype=int32)]\n",
-      "word_list:  [array([ 100, 5600,   50], dtype=int32)]\n",
+      "word_vectors:  [array([100,  20], dtype=int32)]\n",
+      "word_list:  [array([ 100, 5600,   20], dtype=int32)]\n",
       "encoding:  [array([5600,   20], dtype=int32)]\n"
      ]
     }
    ],
    "source": [
+    "no_words = 34016\n",
+    "no_epochs = 3000\n",
+    "batch_size = 128\n",
+    "lr = 0.01\n",
+    "\n",
+    "MAX_DOCUMENT_LENGTH = 100\n",
+    "EMBEDDING_SIZE = 20\n",
+    "MAX_LABEL = 15\n",
+    "HIDDEN_SIZE = 20\n",
+    "\n",
+    "\n",
     "def rnn_model(x, withDropout):\n",
     "    \n",
     "    global no_words\n",
@@ -165,9 +156,9 @@
     "    sess.run(tf.global_variables_initializer())\n",
     "    sess.run(tf.local_variables_initializer())\n",
     "\n",
-    "    print('word_vectors: ', sess.run([tf.shape(word_vectors)], {x: x_train, y_: y_train}))\n",
-    "    print('word_list: ', sess.run([tf.shape(word_list)], {x: x_train, y_: y_train}))\n",
-    "    print('encoding: ', sess.run([tf.shape(encoding)], {x: x_train, y_: y_train}))\n",
+    "    print('word_vectors: ', sess.run([tf.shape(word_vectors[1000])], {x: x_train_w, y_: y_train_w}))\n",
+    "    print('word_list: ', sess.run([tf.shape(word_list)], {x: x_train_w, y_: y_train_w}))\n",
+    "    print('encoding: ', sess.run([tf.shape(encoding)], {x: x_train_w, y_: y_train_w}))\n",
     "#     print('logits: ', sess.run([tf.shape(logits)], {x: x_train, y_: y_train}))\n",
     "\n",
     "\n",
@@ -205,10 +196,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2272, 9045,  130, 3612, 9986, 9987,  699, 9988, 9989,  130,  131,\n",
+       "       1177,  134, 1733, 1135, 2271, 9990, 9991, 2272, 9992,    0,    0,\n",
+       "          0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+       "          0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+       "          0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+       "          0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+       "          0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+       "          0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+       "          0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+       "          0])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_train[1000]"
+   ]
   },
   {
    "cell_type": "code",
