--- a/assignment2/assignment2_question_b/other/utils/temp.ipynb
+++ b/assignment2/assignment2_question_b/other/utils/temp.ipynb
@@ -151,7 +151,7 @@
     "#     Optimizer\n",
     "#     entropy = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits_v2(labels=tf.one_hot(y_, MAX_LABEL), logits=logits))\n",
     "#     train_op = tf.train.AdamOptimizer(lr).minimize(entropy)\n",
-    "\n",
+    "train_op = tf.train.GradientDescentOptimizer()\n",
     "    sess = tf.Session()\n",
     "    sess.run(tf.global_variables_initializer())\n",
     "    sess.run(tf.local_variables_initializer())\n",
@@ -229,6 +229,161 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from matplotlib import pyplot as plt\n",
+    "plt.style.use('dark_background')\n",
+    "from keras.preprocessing.text import Tokenizer\n",
+    "from keras.preprocessing.sequence import pad_sequences\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from keras.utils import to_categorical\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense, Dropout, Embedding, LSTM, GlobalMaxPooling1D, SpatialDropout1D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/20\n",
+      "5600/5600 [==============================] - 3s 492us/step - loss: 2.7025 - accuracy: 0.0700\n",
+      "Epoch 2/20\n",
+      "5600/5600 [==============================] - 2s 430us/step - loss: 2.6920 - accuracy: 0.0702\n",
+      "Epoch 3/20\n",
+      "5600/5600 [==============================] - 2s 397us/step - loss: 2.6781 - accuracy: 0.0748\n",
+      "Epoch 4/20\n",
+      "5600/5600 [==============================] - 2s 403us/step - loss: 2.6711 - accuracy: 0.0689\n",
+      "Epoch 5/20\n",
+      "5600/5600 [==============================] - 2s 410us/step - loss: 2.6676 - accuracy: 0.0750\n",
+      "Epoch 6/20\n",
+      "5600/5600 [==============================] - 2s 387us/step - loss: 2.6651 - accuracy: 0.0670\n",
+      "Epoch 7/20\n",
+      "5600/5600 [==============================] - 2s 399us/step - loss: 2.6617 - accuracy: 0.0727\n",
+      "Epoch 8/20\n",
+      "5600/5600 [==============================] - 2s 401us/step - loss: 2.6600 - accuracy: 0.0704\n",
+      "Epoch 9/20\n",
+      "5600/5600 [==============================] - 2s 416us/step - loss: 2.6605 - accuracy: 0.0702\n",
+      "Epoch 10/20\n",
+      "5600/5600 [==============================] - 3s 478us/step - loss: 2.6552 - accuracy: 0.0736\n",
+      "Epoch 11/20\n",
+      "5600/5600 [==============================] - 3s 457us/step - loss: 2.6559 - accuracy: 0.0712\n",
+      "Epoch 12/20\n",
+      "5600/5600 [==============================] - 2s 443us/step - loss: 2.6512 - accuracy: 0.0718\n",
+      "Epoch 13/20\n",
+      "5600/5600 [==============================] - 2s 444us/step - loss: 2.6539 - accuracy: 0.0720\n",
+      "Epoch 14/20\n",
+      "5600/5600 [==============================] - 3s 447us/step - loss: 2.6541 - accuracy: 0.0684\n",
+      "Epoch 15/20\n",
+      "5600/5600 [==============================] - 3s 450us/step - loss: 2.6517 - accuracy: 0.0718\n",
+      "Epoch 16/20\n",
+      "5600/5600 [==============================] - 3s 456us/step - loss: 2.6515 - accuracy: 0.0696\n",
+      "Epoch 17/20\n",
+      "5600/5600 [==============================] - 2s 442us/step - loss: 2.6511 - accuracy: 0.0716\n",
+      "Epoch 18/20\n",
+      "5600/5600 [==============================] - 3s 450us/step - loss: 2.6510 - accuracy: 0.0695\n",
+      "Epoch 19/20\n",
+      "5600/5600 [==============================] - 2s 436us/step - loss: 2.6480 - accuracy: 0.0702\n",
+      "Epoch 20/20\n",
+      "5600/5600 [==============================] - 2s 435us/step - loss: 2.6468 - accuracy: 0.0727\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_lstm = Sequential()\n",
+    "model_lstm.add(Embedding(input_dim = no_words, output_dim = 20, input_length = MAX_DOCUMENT_LENGTH))\n",
+    "model_lstm.add(SpatialDropout1D(0.3))\n",
+    "model_lstm.add(LSTM(20, dropout = 0.3, recurrent_dropout = 0.3))\n",
+    "model_lstm.add(Dense(20, activation = 'relu'))\n",
+    "model_lstm.add(Dropout(0.3))\n",
+    "model_lstm.add(Dense(15, activation = 'softmax'))\n",
+    "model_lstm.compile(\n",
+    "    loss='categorical_crossentropy',\n",
+    "    optimizer='Adam',\n",
+    "    metrics=['accuracy']\n",
+    ")\n",
+    "\n",
+    "history = model_lstm.fit(\n",
+    "    x_train_w,\n",
+    "    to_categorical(y_train_w),\n",
+    "    epochs = 20,\n",
+    "    batch_size = 128\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    if withDropout:\n",
+    "\n",
+    "        np.save(os.path.join(dir_path, 'other', 'npy', 'word_gru_entropy_on_training_withDropout.npy'), np.array(entropy_on_training))\n",
+    "        np.save(os.path.join(dir_path, 'other', 'npy', 'word_gru_accuracy_on_testing_withDropout.npy'), np.array(accuracy_on_testing))\n",
+    "\n",
+    "        #plot\n",
+    "        plt.figure()\n",
+    "        plt.plot(entropy_on_training)\n",
+    "        plt.plot(accuracy_on_testing)\n",
+    "        plt.title('entropy / accuracy word cnn with dropout')\n",
+    "        plt.xlabel('epoch')\n",
+    "        plt.legend(['entropy_on_training', 'accuracy_on_testing',], loc='upper left')\n",
+    "        plt.savefig(os.path.join(dir_path, 'other', 'figure', 'word_gru_withDropout.png'))  \n",
+    "\n",
+    "    else:\n",
+    "        np.save(os.path.join(dir_path, 'other', 'npy', 'word_gru_entropy_on_training_withoutDropout.npy'), np.array(entropy_on_training))\n",
+    "        np.save(os.path.join(dir_path, 'other', 'npy', 'word_gru_accuracy_on_testing_withoutDropout.npy'), np.array(accuracy_on_testing))\n",
+    "\n",
+    "        #plot\n",
+    "        plt.figure()\n",
+    "        plt.plot(entropy_on_training)\n",
+    "        plt.plot(accuracy_on_testing)\n",
+    "        plt.title('entropy / accuracy word cnn without dropout')\n",
+    "        plt.xlabel('epoch')\n",
+    "        plt.legend(['entropy_on_training', 'accuracy_on_testing',], loc='upper left')\n",
+    "        plt.savefig(os.path.join(dir_path, 'other', 'figure', 'word_gru_withoutDropout.png'))  \n"
+   ]
   },
   {
    "cell_type": "code",
