--- a/assignment2/assignment2_question_b/other/utils/temp.ipynb
+++ b/assignment2/assignment2_question_b/other/utils/temp.ipynb
@@ -357,10 +357,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "    if withDropout:\n",
-    "\n",
-    "        np.save(os.path.join(dir_path, 'other', 'npy', 'word_gru_entropy_on_training_withDropout.npy'), np.array(entropy_on_training))\n",
-    "        np.save(os.path.join(dir_path, 'other', 'npy', 'word_gru_accuracy_on_testing_withDropout.npy'), np.array(accuracy_on_testing))\n",
+    "np.save(os.path.join(dir_path, 'other', 'npy', 'word_2rnn_entropy_on_training_withDropout.npy'), np.array(entropy_on_training))\n",
+    "        np.save(os.path.join(dir_path, 'other', 'npy', 'word_2rnn_accuracy_on_testing_withDropout.npy'), np.array(accuracy_on_testing))\n",
     "\n",
     "        #plot\n",
     "        plt.figure()\n",
@@ -369,11 +367,11 @@
     "        plt.title('entropy / accuracy word cnn with dropout')\n",
     "        plt.xlabel('epoch')\n",
     "        plt.legend(['entropy_on_training', 'accuracy_on_testing',], loc='upper left')\n",
-    "        plt.savefig(os.path.join(dir_path, 'other', 'figure', 'word_gru_withDropout.png'))  \n",
+    "        plt.savefig(os.path.join(dir_path, 'other', 'figure', 'word_2rnn_withDropout.png'))  \n",
     "\n",
     "    else:\n",
-    "        np.save(os.path.join(dir_path, 'other', 'npy', 'word_gru_entropy_on_training_withoutDropout.npy'), np.array(entropy_on_training))\n",
-    "        np.save(os.path.join(dir_path, 'other', 'npy', 'word_gru_accuracy_on_testing_withoutDropout.npy'), np.array(accuracy_on_testing))\n",
+    "        np.save(os.path.join(dir_path, 'other', 'npy', 'word_2rnn_entropy_on_training_withoutDropout.npy'), np.array(entropy_on_training))\n",
+    "        np.save(os.path.join(dir_path, 'other', 'npy', 'word_2rnn_accuracy_on_testing_withoutDropout.npy'), np.array(accuracy_on_testing))\n",
     "\n",
     "        #plot\n",
     "        plt.figure()\n",
@@ -382,15 +380,9 @@
     "        plt.title('entropy / accuracy word cnn without dropout')\n",
     "        plt.xlabel('epoch')\n",
     "        plt.legend(['entropy_on_training', 'accuracy_on_testing',], loc='upper left')\n",
-    "        plt.savefig(os.path.join(dir_path, 'other', 'figure', 'word_gru_withoutDropout.png'))  \n"
+    "        plt.savefig(os.path.join(dir_path, 'other', 'figure', 'word_2rnn_withoutDropout.png'))  \n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
