--- a/assignment2/assignment2_question_b/other/utils/temp.ipynb
+++ b/assignment2/assignment2_question_b/other/utils/temp.ipynb
@@ -161,7 +161,7 @@
     "    print('encoding: ', sess.run([tf.shape(encoding)], {x: x_train_w, y_: y_train_w}))\n",
     "#     print('logits: ', sess.run([tf.shape(logits)], {x: x_train, y_: y_train}))\n",
     "\n",
-    "\n",
+    "tf.nn.dynamic_rnn()\n",
     "#     entropy_on_training = []\n",
     "#     accuracy_on_testing = []\n",
     "\n",
