--- a/assignment2/assignment2_question_b/other/utils/temp.ipynb
+++ b/assignment2/assignment2_question_b/other/utils/temp.ipynb
@@ -94,14 +94,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "word_vectors:  [array([100,  20], dtype=int32)]\n",
+      "WARNING:tensorflow:From <ipython-input-96-faeb9db4ec52>:21: GRUCell.__init__ (from tensorflow.python.ops.rnn_cell_impl) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "This class is equivalent as tf.keras.layers.GRUCell, and will be replaced by that in Tensorflow 2.0.\n",
+      "WARNING:tensorflow:From /Users/heyuhao/opt/anaconda3/lib/python3.7/site-packages/tensorflow_core/python/ops/rnn_cell_impl.py:565: calling Constant.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
+      "word_vectors:  [array([5600,  100,   20], dtype=int32)]\n",
       "word_list:  [array([ 100, 5600,   20], dtype=int32)]\n",
       "encoding:  [array([5600,   20], dtype=int32)]\n"
      ]
@@ -128,7 +134,7 @@
     "\n",
     "    word_list = tf.unstack(word_vectors, axis=1)\n",
     "\n",
-    "    cell = tf.nn.rnn_cell.BasicRNNCell(HIDDEN_SIZE)\n",
+    "    cell = tf.nn.rnn_cell.GRUCell(HIDDEN_SIZE)\n",
     "    _, encoding = tf.nn.static_rnn(cell, word_list, dtype=tf.float32)\n",
     "\n",
     "#     logits = tf.layers.dense(encoding, MAX_LABEL, activation=None)\n",
@@ -151,17 +157,16 @@
     "#     Optimizer\n",
     "#     entropy = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits_v2(labels=tf.one_hot(y_, MAX_LABEL), logits=logits))\n",
     "#     train_op = tf.train.AdamOptimizer(lr).minimize(entropy)\n",
-    "train_op = tf.train.GradientDescentOptimizer()\n",
     "    sess = tf.Session()\n",
     "    sess.run(tf.global_variables_initializer())\n",
     "    sess.run(tf.local_variables_initializer())\n",
     "\n",
-    "    print('word_vectors: ', sess.run([tf.shape(word_vectors[1000])], {x: x_train_w, y_: y_train_w}))\n",
+    "    print('word_vectors: ', sess.run([tf.shape(word_vectors)], {x: x_train_w, y_: y_train_w}))\n",
     "    print('word_list: ', sess.run([tf.shape(word_list)], {x: x_train_w, y_: y_train_w}))\n",
     "    print('encoding: ', sess.run([tf.shape(encoding)], {x: x_train_w, y_: y_train_w}))\n",
     "#     print('logits: ', sess.run([tf.shape(logits)], {x: x_train, y_: y_train}))\n",
     "\n",
-    "tf.nn.dynamic_rnn()\n",
+    "\n",
     "#     entropy_on_training = []\n",
     "#     accuracy_on_testing = []\n",
     "\n",
@@ -279,53 +284,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/20\n",
-      "5600/5600 [==============================] - 3s 492us/step - loss: 2.7025 - accuracy: 0.0700\n",
-      "Epoch 2/20\n",
-      "5600/5600 [==============================] - 2s 430us/step - loss: 2.6920 - accuracy: 0.0702\n",
-      "Epoch 3/20\n",
-      "5600/5600 [==============================] - 2s 397us/step - loss: 2.6781 - accuracy: 0.0748\n",
-      "Epoch 4/20\n",
-      "5600/5600 [==============================] - 2s 403us/step - loss: 2.6711 - accuracy: 0.0689\n",
-      "Epoch 5/20\n",
-      "5600/5600 [==============================] - 2s 410us/step - loss: 2.6676 - accuracy: 0.0750\n",
-      "Epoch 6/20\n",
-      "5600/5600 [==============================] - 2s 387us/step - loss: 2.6651 - accuracy: 0.0670\n",
-      "Epoch 7/20\n",
-      "5600/5600 [==============================] - 2s 399us/step - loss: 2.6617 - accuracy: 0.0727\n",
-      "Epoch 8/20\n",
-      "5600/5600 [==============================] - 2s 401us/step - loss: 2.6600 - accuracy: 0.0704\n",
-      "Epoch 9/20\n",
-      "5600/5600 [==============================] - 2s 416us/step - loss: 2.6605 - accuracy: 0.0702\n",
-      "Epoch 10/20\n",
-      "5600/5600 [==============================] - 3s 478us/step - loss: 2.6552 - accuracy: 0.0736\n",
-      "Epoch 11/20\n",
-      "5600/5600 [==============================] - 3s 457us/step - loss: 2.6559 - accuracy: 0.0712\n",
-      "Epoch 12/20\n",
-      "5600/5600 [==============================] - 2s 443us/step - loss: 2.6512 - accuracy: 0.0718\n",
-      "Epoch 13/20\n",
-      "5600/5600 [==============================] - 2s 444us/step - loss: 2.6539 - accuracy: 0.0720\n",
-      "Epoch 14/20\n",
-      "5600/5600 [==============================] - 3s 447us/step - loss: 2.6541 - accuracy: 0.0684\n",
-      "Epoch 15/20\n",
-      "5600/5600 [==============================] - 3s 450us/step - loss: 2.6517 - accuracy: 0.0718\n",
-      "Epoch 16/20\n",
-      "5600/5600 [==============================] - 3s 456us/step - loss: 2.6515 - accuracy: 0.0696\n",
-      "Epoch 17/20\n",
-      "5600/5600 [==============================] - 2s 442us/step - loss: 2.6511 - accuracy: 0.0716\n",
-      "Epoch 18/20\n",
-      "5600/5600 [==============================] - 3s 450us/step - loss: 2.6510 - accuracy: 0.0695\n",
-      "Epoch 19/20\n",
-      "5600/5600 [==============================] - 2s 436us/step - loss: 2.6480 - accuracy: 0.0702\n",
-      "Epoch 20/20\n",
-      "5600/5600 [==============================] - 2s 435us/step - loss: 2.6468 - accuracy: 0.0727\n"
+     "ename": "ValueError",
+     "evalue": "Input 0 is incompatible with layer lstm_2: expected ndim=3, found ndim=2",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-95-2c978f3db59e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mmodel_lstm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mSpatialDropout1D\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mmodel_lstm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mLSTM\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdropout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrecurrent_dropout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mmodel_lstm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mLSTM\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdropout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrecurrent_dropout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mmodel_lstm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDense\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mactivation\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'relu'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mmodel_lstm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDropout\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.7/site-packages/keras/engine/sequential.py\u001b[0m in \u001b[0;36madd\u001b[0;34m(self, layer)\u001b[0m\n\u001b[1;32m    180\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnetwork\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_source_inputs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutputs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    181\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutputs\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 182\u001b[0;31m             \u001b[0moutput_tensor\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlayer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutputs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    183\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput_tensor\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    184\u001b[0m                 raise TypeError('All layers in a Sequential model '\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.7/site-packages/keras/layers/recurrent.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, inputs, initial_state, constants, **kwargs)\u001b[0m\n\u001b[1;32m    539\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    540\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0minitial_state\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mconstants\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 541\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mRNN\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__call__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    542\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    543\u001b[0m         \u001b[0;31m# If any of `initial_state` or `constants` are specified and are Keras\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.7/site-packages/keras/engine/base_layer.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, inputs, **kwargs)\u001b[0m\n\u001b[1;32m    444\u001b[0m                 \u001b[0;31m# Raise exceptions in case the input is not compatible\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    445\u001b[0m                 \u001b[0;31m# with the input_spec specified in the layer constructor.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 446\u001b[0;31m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0massert_input_compatibility\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    447\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    448\u001b[0m                 \u001b[0;31m# Collect input shapes to build layer.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.7/site-packages/keras/engine/base_layer.py\u001b[0m in \u001b[0;36massert_input_compatibility\u001b[0;34m(self, inputs)\u001b[0m\n\u001b[1;32m    340\u001b[0m                                      \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m': expected ndim='\u001b[0m \u001b[0;34m+\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    341\u001b[0m                                      \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mspec\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m', found ndim='\u001b[0m \u001b[0;34m+\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 342\u001b[0;31m                                      str(K.ndim(x)))\n\u001b[0m\u001b[1;32m    343\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mspec\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax_ndim\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    344\u001b[0m                 \u001b[0mndim\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mK\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Input 0 is incompatible with layer lstm_2: expected ndim=3, found ndim=2"
      ]
     }
    ],
@@ -333,6 +307,7 @@
     "model_lstm = Sequential()\n",
     "model_lstm.add(Embedding(input_dim = no_words, output_dim = 20, input_length = MAX_DOCUMENT_LENGTH))\n",
     "model_lstm.add(SpatialDropout1D(0.3))\n",
+    "model_lstm.add(LSTM(20, dropout = 0.3, recurrent_dropout = 0.3))\n",
     "model_lstm.add(LSTM(20, dropout = 0.3, recurrent_dropout = 0.3))\n",
     "model_lstm.add(Dense(20, activation = 'relu'))\n",
     "model_lstm.add(Dropout(0.3))\n",
@@ -357,31 +332,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save(os.path.join(dir_path, 'other', 'npy', 'word_2rnn_entropy_on_training_withDropout.npy'), np.array(entropy_on_training))\n",
-    "        np.save(os.path.join(dir_path, 'other', 'npy', 'word_2rnn_accuracy_on_testing_withDropout.npy'), np.array(accuracy_on_testing))\n",
+    "np.save(os.path.join(dir_path, 'other', 'npy', 'char_gru_clipping_entropy_on_training_withDropout.npy'), np.array(entropy_on_training))\n",
+    "        np.save(os.path.join(dir_path, 'other', 'npy', 'char_gru_clipping_accuracy_on_testing_withDropout.npy'), np.array(accuracy_on_testing))\n",
     "\n",
     "        #plot\n",
     "        plt.figure()\n",
     "        plt.plot(entropy_on_training)\n",
     "        plt.plot(accuracy_on_testing)\n",
-    "        plt.title('entropy / accuracy word cnn with dropout')\n",
+    "        plt.title('entropy / accuracy')\n",
     "        plt.xlabel('epoch')\n",
     "        plt.legend(['entropy_on_training', 'accuracy_on_testing',], loc='upper left')\n",
-    "        plt.savefig(os.path.join(dir_path, 'other', 'figure', 'word_2rnn_withDropout.png'))  \n",
+    "        plt.savefig(os.path.join(dir_path, 'other', 'figure', 'char_gru_clipping_withDropout.png'))  \n",
     "\n",
     "    else:\n",
-    "        np.save(os.path.join(dir_path, 'other', 'npy', 'word_2rnn_entropy_on_training_withoutDropout.npy'), np.array(entropy_on_training))\n",
-    "        np.save(os.path.join(dir_path, 'other', 'npy', 'word_2rnn_accuracy_on_testing_withoutDropout.npy'), np.array(accuracy_on_testing))\n",
+    "        np.save(os.path.join(dir_path, 'other', 'npy', 'char_gru_clipping_entropy_on_training_withoutDropout.npy'), np.array(entropy_on_training))\n",
+    "        np.save(os.path.join(dir_path, 'other', 'npy', 'char_gru_clipping_accuracy_on_testing_withoutDropout.npy'), np.array(accuracy_on_testing))\n",
     "\n",
     "        #plot\n",
     "        plt.figure()\n",
     "        plt.plot(entropy_on_training)\n",
     "        plt.plot(accuracy_on_testing)\n",
-    "        plt.title('entropy / accuracy word cnn without dropout')\n",
+    "        plt.title('entropy / accuracy')\n",
     "        plt.xlabel('epoch')\n",
     "        plt.legend(['entropy_on_training', 'accuracy_on_testing',], loc='upper left')\n",
-    "        plt.savefig(os.path.join(dir_path, 'other', 'figure', 'word_2rnn_withoutDropout.png'))  \n",
-    "\n"
+    "        plt.savefig(os.path.join(dir_path, 'other', 'figure', 'char_gru_clipping_withoutDropout.png')) "
    ]
   },
   {
